--- a/lab-1/index.html
+++ b/lab-1/index.html
@@ -3,10 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <title>Lab 1</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/main.css" />
   </head>
+
   <body>
-    <h1>Lab 1</h1>
-    <a href="..">Powrót</a>
+
+    <header>
+    <h1>Hubert Wagner</h1>
+    </header>
+
+    <nav>
+    <a href="konkurs.html">Konkurs</a>
+
+    <a href="login.html">Login</a>
+
+    <a href="uwagi.html">Uwagi</a>
+    </nav>
+    <br>
+    <a href="../index.html">Powrót</a>
+    
+
   </body>
 </html>
